feat(chats): updated chats feature

--- a/src/app/chats/chats.component.html
+++ b/src/app/chats/chats.component.html
@@ -12,6 +12,12 @@
                 </mat-option>
             </mat-autocomplete>
         </div>
+        <mat-selection-list [multiple]="false">
+            <mat-divider></mat-divider>
+            <!--<mat-list-option *ngFor=""let chat of>
+
+            </mat-list-option>-->
+        </mat-selection-list>
     </div>
     <div class="messages mat-elevation-z5">Hola</div>
 </div>
