--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,13 +14,13 @@
       <a mat-list-item routerLink="/profile">
         <mat-icon>person</mat-icon>Profile
       </a>
-      <a mat-list-item routerLink="/urlorder">
+      <a mat-list-item routerLink="/urlorder" *ngIf="authService.isBuyer$ | async">
         <mat-icon>shop</mat-icon> My Orders
       </a>
-      <a mat-list-item routerLink="/customer-orders">
+      <a mat-list-item routerLink="/customer-orders" *ngIf="authService.isBuyer$ | async">
         <mat-icon>shop</mat-icon> Customer Orders
       </a>
-      <a mat-list-item routerLink="/buy-wholesale">
+      <a mat-list-item routerLink="/buy-wholesale" *ngIf="authService.isBuyer$ | async">
         <mat-icon>shop_two</mat-icon> Buy Wholesale
       </a>
       <a mat-list-item routerLink="/wallet">
@@ -32,19 +32,19 @@
       <a mat-list-item routerLink="/direction">
         <mat-icon>room</mat-icon> Directions
       </a>
-      <a mat-list-item [routerLink]="'/calculator'">
+      <a mat-list-item [routerLink]="'/calculator'" *ngIf="authService.isBuyer$ | async">
         <mat-icon> monetization_on</mat-icon> Calculator
       </a>
-      <a mat-list-item routerLink="{{asa}}">
+      <a mat-list-item routerLink="{{asa}}" *ngIf="authService.isBuyer$ | async">
         <mat-icon>style</mat-icon> Coupons
       </a>
-      <a mat-list-item routerLink="/domestic-shipment">
+      <a mat-list-item routerLink="/domestic-shipment" *ngIf="authService.isBuyer$ | async">
         <mat-icon> local_shipping</mat-icon> Domestic Shipments
       </a>
-      <a mat-list-item routerLink="/fasty">
+      <a mat-list-item routerLink="/fasty" *ngIf="authService.isBuyer$ | async">
         <mat-icon> local_offer</mat-icon> Fasty
       </a>
-      <a mat-list-item routerLink="/generateorder">
+      <a mat-list-item routerLink="/generateorder" *ngIf="authService.isBuyer$ | async">
         <mat-icon>code</mat-icon> URL Order
       </a>
       <a mat-list-item routerLink="/login" (click)="isSidenavOpen=!isSidenavOpen">
