fix(orders): list buywholesaleorders into my orders section

--- a/src/app/product-wholesale-payment/product-wholesale-payment.component.html
+++ b/src/app/product-wholesale-payment/product-wholesale-payment.component.html
@@ -91,7 +91,7 @@
             </div>
             
             <div class="button-pay">
-                <button mat-flat-button color="primary" routerLink="/buy-wholesale/product-wholesale">Pay</button>
+                <button mat-flat-button color="primary" routerLink="/buy-wholesale/product-wholesale" (click)="addToOrderList()">Pay</button>
             </div>
             
         </div>
