--- a/src/app/product-wholesale/product-wholesale.component.html
+++ b/src/app/product-wholesale/product-wholesale.component.html
@@ -6,7 +6,9 @@
                     <mat-card-title>{{productWholesale.name}}</mat-card-title>
                     <mat-card-subtitle>Small interval</mat-card-subtitle>
                 </mat-card-header>
-                <img mat-card-image src={{productWholesale.picture}} alt="Photo of a IPHONE 13 PRO MAX -128GB-GOLD">
+                <div>
+                    <img  src={{productWholesale.picture}} alt="Buy wholesale product" class="image-buy-wholesale-product">
+                </div>
                 <mat-card-content>
                     <ul>
                         <li>{{productWholesale.principalFeature1}}</li>
