--- a/src/app/customer-orders/customer-orders.component.html
+++ b/src/app/customer-orders/customer-orders.component.html
@@ -20,7 +20,7 @@
             </div>
             <div class="right-content">
                 <h4>Total Income: ${{getApproximatedCost(order.price, order.comision)}}</h4>
-                <button mat-raised-button class="button-style"><span>Select Order</span></button>
+                <button mat-raised-button class="button-style" [routerLink]="['/customer-order-info', order.id]"><span>See only</span></button>
            </div>      
     </div>
     
