fix: some features about the front

--- a/src/app/calculator/calculator.component.html
+++ b/src/app/calculator/calculator.component.html
@@ -56,7 +56,7 @@
         <h2>Approximated Price</h2>
         <div fxLayout="row" fxLayoutAlign="space-evenly center">
           <div class="img-container">
-            <img alt="Product Category Image" src="../../assets/images/fastyProducts/Iphone%2013.jpg">
+            <img alt="Product Category Image" src="https://i.imgur.com/JVdarAP.png">
           </div>
 
           <div class="price">
