--- a/src/app/product-wholesale/product-wholesale.component.html
+++ b/src/app/product-wholesale/product-wholesale.component.html
@@ -17,7 +17,7 @@
                     </ul>
                 </mat-card-content>
                 <mat-card-actions>
-                    <button mat-button>Buy S/{{productWholesale.price}}</button>
+                    <button mat-button>Buy ${{productWholesale.price}}</button>
                 </mat-card-actions>
             </mat-card>
         </mat-grid-tile>
