--- a/src/app/direction/direction.component.css
+++ b/src/app/direction/direction.component.css
@@ -1,35 +1,25 @@
 .containerDirection {
   display: flex;
   align-items: center;
+  justify-content: center;
   padding: 7% 0;
 }
 .cardpadding{
-  padding-left:18rem;
+  width: 50%;
  }
 .w-full{
 width: 190px;
 height: 190px;
 }
-.dsc-card {
-  height: 350px;
-  width: 400px;
-  border: 1px solid Orgba(0, 0, 0, 0.25);
-  border-radius: 10px;
-  box-shadow: 0px epx Gpx 1px Orgba(e, e, e, e.15);
-  padding: 0.5rem;
-  display: flex;
-  align-items: center;
-  border-left: 4px solid rgb(255, 255, 255);
-  transition: 0.7s all ease-in-out;
-  background-color: #d1d1d1;
-}
+
 .grid2c {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
-  padding: 0 20px;
-  margin-top: 40px;;
-  justify-items: center;
+  width: 50%;
+}
+
+.dsc-card {
+  background-color: #d1d1d1;
+  border-radius: 10px;
+  width: 100%;
 }
 
 .dsc-card:hover {
@@ -41,8 +31,6 @@ height: 190px;
   border-left: 1px solid rgba(121, 121, 121, 0.25);
   padding: 0.5rem;
 }
-
-
 
 .imageTall{
 width:180px;
