--- a/src/app/directioninfo/directioninfo.component.css
+++ b/src/app/directioninfo/directioninfo.component.css
@@ -1,23 +1,28 @@
-.directionform {
-  border: 3px solid cornflowerblue;
-  width: 500px;
-
-  border-radius: 5%;
-}
 .directioninfocontainer {
-  /*border: 5px solid lightseagreen;*/
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   padding: 7% 0;
 }
-.directionimg{
-  width: 30%;
-  height: 30%;
-  margin: 0;
+.direction-img-container {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+}
+.directionimg {
+  width: 50%;
   border-radius: inherit;
 }
+.info-container {
+  width: 40%;
+}
+.directionform {
+  border: 3px solid cornflowerblue;
+  width: 80%;
+  padding: 2%;
+  border-radius: 5%;
+}
 .paddingbutton{
-
-  padding-right: 10rem;
+  display: flex;
+  justify-content: space-evenly;
 }
