added names and id for components to connect with Selenium WebDriver

--- a/src/app/urlorder/urlorder.component.html
+++ b/src/app/urlorder/urlorder.component.html
@@ -84,8 +84,8 @@
 
         </mat-grid-list>
       </mat-card-content>
-      <button [disabled]="!urlorderForm.valid" mat-flat-button color="primary" type="submit">Registred</button>
-      <button routerLink="/urlorder" mat-flat-button color="primary" type="submit">Cancel</button>
+      <button [disabled]="!urlorderForm.valid" mat-flat-button color="primary" type="submit" name="registerOrder">Registred</button>
+      <button routerLink="/urlorder" mat-flat-button color="primary" type="submit" name="cancelOrder">Cancel</button>
     </mat-card>
   </form>
 
