--- a/src/app/customer-orders/customer-orders.component.html
+++ b/src/app/customer-orders/customer-orders.component.html
@@ -1,7 +1,7 @@
 <h1>Orders</h1>
 
 
-    <div class="order-card" *ngFor="let order of urlOrders">
+    <div class="order-card" id="order-card-{{i}}" *ngFor="let order of urlOrders; let i=index">
         <div class="title-content">
             <div class="title">
                 <h2>{{order.name}}</h2>
@@ -21,9 +21,9 @@
             <div class="right-content">
                 <h4>Total Income: ${{getApproximatedCost(order.price, order.comision)}}</h4>
                 <button mat-raised-button class="button-style" [routerLink]="['/customer-order-info', order.id]"><span>See only</span></button>
-           </div>      
+           </div>
     </div>
-    
+
     </div>
-    
+
 
