--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -4,13 +4,13 @@
     <div class="row w-full center-item">
       <div class="pading-h">
         <mat-card class="welcomeImgCard ">
-          <img (click)="redirectToLoginTraveler()" mat-card-image [src]="welcomeImgSource" alt="traveling">
+          <img (click)="redirectToLoginTraveler()" name="traveler" mat-card-image [src]="welcomeImgSource" alt="traveling">
           <h1 style="text-align:center">Traveler </h1>
         </mat-card>
       </div>
       <div class="pading-h">
         <mat-card class="welcomeImgCard">
-          <img (click)="redirectToLoginBuyer() " mat-card-image [src]="welcomeImg2Source" alt="buyer">
+          <img (click)="redirectToLoginBuyer()" name="buyer" mat-card-image [src]="welcomeImg2Source" alt="buyer">
           <h1 style="text-align:center">Buyer </h1>
         </mat-card>
       </div>
